[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
globset = "0.4.18"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem"] }
plist = "1.8.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4"] }
walkdir = "2.5.0"
